--- a/os.md.html
+++ b/os.md.html
@@ -292,6 +292,7 @@ pacman -S man-pages-posix
 pacman -S base-devel
 pacman -S bc
 pacman -S python
+pacman -S vifm
 
 pacman -S mingw-w64-x86_64-toolchain
 pacman -S mingw-w64-x86_64-clang
