--- a/dev.md.html
+++ b/dev.md.html
@@ -5,9 +5,12 @@
 <meta name="keywords" content="*memo_dev*">
 **Develop**
 
-<meta name="keywords" content="*memo_dev.niz*">
-Niz 84 Key
+<meta name="keywords" content="*memo_dev.keyboard*">
+Keyboard
 =======================================================
+
+<meta name="keywords" content="*memo_dev.niz*">
+## Niz 84 Key
 
 *********************************************************************
 * +---+ +---+---+---+---+ +---+---+---+---+ +---+---+---+---+ +---+
@@ -27,8 +30,7 @@ Niz 84 Key
 
 
 <meta name="keywords" content="*memo_dev.hhk*">
-HHK 60 Key
-=======================================================
+## HHK 60 Key
 
 *****************************************************************
 * +---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+
@@ -44,9 +46,9 @@ HHK 60 Key
 *         +---+---+-----------------------+-------+---+
 *****************************************************************
 
-<meta name="keywords" content="*memo_dev.keymap*">
-Keymap
-=======================================================
+<meta name="keywords" content="*memo_dev.autohotkey*">
+<meta name="keywords" content="*memo_dev.ahk*">
+### AutoHotKey
 
 *****************************************************************
 * +---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+
@@ -62,10 +64,6 @@ Keymap
 *         +---+---+-----------------------+-------+---+
 *****************************************************************
 
-<meta name="keywords" content="*memo_dev.autohotkey*">
-<meta name="keywords" content="*memo_dev.ahk*">
-## AutoHotKey
-
 App      | Key             | Description
 ---------|-----------------|---
 Windows  | LAlt            | F1
@@ -75,6 +73,10 @@ Windows  | RAlt            | Hankaku/Zenkaku
 mintty   | RShift          | Hankaku/Zenkaku Esc
 mintty   | F5              | maximize the tmux pane, minimize the window
 mintty   | F6              | maximize the window, restore tmux panes
+
+<meta name="keywords" content="*memo_dev.keymap*">
+Keymap
+=======================================================
 
 ## Function keymap
 App        | Key             | Description
