--- a/os.md.html
+++ b/os.md.html
@@ -422,10 +422,21 @@ MX Linux
 - Japanese_Fonts
 - Japanese_Input_fcitx
 
+<meta name="keywords" content="*memo_os.apt*">
+## apt
+~~~
+apt list pkg
+apt show pkg
+apt install pkg
+apt remove pkg
+apt search pkg
+~~~
+
 ## Installed
 ~~~
 sudo apt install vim
 sudo apt install vifm
+sudo apt install universal-ctags
 ~~~
 
 <meta name="keywords" content="*memo_os.bootcamp*">
@@ -457,6 +468,7 @@ Termux
 - [The Termux Wiki](https://wiki.termux.com/wiki/Main_Page)
 - Hacker's Keyboard
 
+<meta name="keywords" content="*memo_os.pkg*">
 ## pkg [recommended]
 ~~~
 pkg help
