--- a/os.md.html
+++ b/os.md.html
@@ -559,6 +559,7 @@ misc
 =======================================================
 ## NTP Server
 ntp.nict.jp
+time.windows.com
 
 <style class="fallback">body{visibility:hidden}</style>
 <script src="markdeep.min.js"></script>
