--- a/os.md.html
+++ b/os.md.html
@@ -415,6 +415,9 @@ SysRq + s           | sync
 SysRq + u           | unmount
 SysRq + b           | reboot
 
+## WindowsでISOイメージをUSBメモリーに書き込む
+- [Rufus](https://rufus.ie/)
+
 <meta name="keywords" content="*memo_os.mxlinux*">
 MX Linux
 =======================================================
@@ -435,8 +438,62 @@ apt search pkg
 ## Installed
 ~~~
 sudo apt install vim
+sudo apt install vim-gtk3
 sudo apt install vifm
 sudo apt install universal-ctags
+~~~
+
+## Setup
+- MX Tools
+  - Repo Manager
+- Synaptic
+  - Settings > Repository
+- Terminal
+  - Preferences...
+    - Disable F1
+    - Disable Alt
+    - Colors
+- japanese input
+  - Mozc
+- mount shared folder
+  - mount -t vboxsf share mount_point
+- copy and paste
+  - vim-gtk3 +clipboard +python3
+
+- [VirtualBox(2) VirtualBoxにMX Linux 19 とGuest Additions をインストール](https://qiita.com/FuRuYa7/items/954e8aab926ab99ec95e)
+- [How to enable a Virtualbox shared folder for Linux guest systems](https://averagelinuxuser.com/virtualbox-shared-folder/)
+- [VirtualBox のゲスト Linux で共有フォルダを使う](https://jade.alt-area.jp/archives/769)
+
+~~~
+$ sudo apt install build-essential dkms linux-headers-$(uname -r)
+$ sudo sh VBoxLinuxAdditions.run
+$ sudo usermod -a -G vboxsf `whoami`
+$ sudo chown -R `whoami`:users /media/
+$ id
+~~~
+
+## /etc/fstab
+~~~
+share /mnt/vbox/share vboxsf defaults,iocharset=utf8,uid=1000,gid=1000 0 0
+~~~
+
+## encfs
+- [EncFS](https://wiki.archlinux.jp/index.php/EncFS)
+- [ディスク暗号化](https://wiki.archlinux.jp/index.php/ディスク暗号化)
+
+### create / mount
+~~~
+$ encfs ~/.mysecret ~/mysecret
+~~~
+
+### umount
+~~~
+$ fusermount -u ~/mysecret
+~~~
+
+### change password
+~~~
+$ encfsctl passwd ~/.mysecret
 ~~~
 
 <meta name="keywords" content="*memo_os.bootcamp*">
