--- a/links.md.html
+++ b/links.md.html
@@ -57,6 +57,13 @@ Links
 
 ## Research
 - [Ke-Sen Huang](http://kesen.realtimerendering.com/)
+- [Two Minute Papers](https://www.youtube.com/channel/UCbfYPyITQ-7l4upoX8nvctg)
+- [Seamless](https://shiropen.com/)
+- [Rendering Course Videos A course on ray tracing and global illumination](https://users.cg.tuwien.ac.at/zsolnai/gfx/rendering-course/)
+- [Learn OpenGL](https://learnopengl.com/)
+- [OpenGL Tutorial](http://www.opengl-tutorial.org/jp/)
+- [Physically Based Rendering:From Theory To ImplementationMatt Pharr, Wenzel Jakob, and Greg Humphreys](http://www.pbr-book.org/3ed-2018/contents.html)
+- [Unreal Engine 4: Digital Human](https://docs.unrealengine.com/en-US/Resources/Showcases/DigitalHumans/index.html)
 
 ## Data
 - [icooon-mono](http://icooon-mono.com/)
@@ -218,7 +225,6 @@ Programming
 - [C++11スマートポインタ入門](https://qiita.com/hmito/items/db3b14917120b285112f)
 
 ## Library
-- [Learn OpenGL](https://learnopengl.com/)
 - [OpenGL 4](https://www.khronos.org/registry/OpenGL-Refpages/gl4/)
 - [OpenGL ES 3.0](https://www.khronos.org/registry/OpenGL-Refpages/es3.0/)
 - [glm](https://glm.g-truc.net/)
