--- a/os.md.html
+++ b/os.md.html
@@ -378,13 +378,12 @@ cygpath -am `pwd`
 VirtualBox
 =======================================================
 
-Shortcut | Description
----------|---
-Host     | Right Control
-Host + F | full screen
-Host + M | minimize
-Host + H | main menu
-Host + C | menu bar
+Shortcut    | Description
+------------|---
+Host        | Right Control
+Host + F    | full screen
+Host + M    | minimize
+Host + Home | menu
 
 ## Shared Folder
 
