--- a/dev.md.html
+++ b/dev.md.html
@@ -497,6 +497,9 @@ o | BS      | h                       | C-B      | one page scroll up
   | C-X C-P | prev completion
   | C-X C-N | next completion
   | C-X C-F | file completion
+  | C-X C-I | completion of keywords in the current and included files
+  | C-X C-D | completion of definitions or macros
+  | C-X C-] | completion of tags
   | C-J     |                         |          | skk mode
 
 <meta name="keywords" content="*memo_vim.commands*">
