--- a/os.md.html
+++ b/os.md.html
@@ -435,6 +435,8 @@ Host + F    | full screen
 Host + M    | minimize
 Host + Home | menu
 
+Host Key: Right Control
+
 ## Shared Folder
 
 ### set a shared folder in a host os
