--- a/links.md.html
+++ b/links.md.html
@@ -255,6 +255,7 @@ Programming
 
 ## Python
 - [python](https://www.python.org/)
+  | [doc](https://docs.python.org/ja/3/index.html)
   | [基礎文法とサンプル集](https://algorithm.joho.info/programming/python/sample-code-py/)
 - [NumPy](https://algorithm.joho.info/programming/python/numpy-sample-code/)
 - [matplotlib](https://qiita.com/skotaro/items/08dc0b8c5704c94eafb9)
