--- a/os.md.html
+++ b/os.md.html
@@ -506,6 +506,9 @@ sudo apt install vim
 sudo apt install vim-gtk3
 sudo apt install vifm
 sudo apt install universal-ctags
+sudo apt install clang
+sudo apt install python3-venv
+sudo apt install python3-dev
 ~~~
 
 ## Setup
