--- a/sh.md.html
+++ b/sh.md.html
@@ -120,6 +120,7 @@ n=`expr $n + 1`
 n=$((n + 1))
 ~~~
 
+<meta name="keywords" content="*memo_sh.syntax*">
 ## syntax
 ### if
 ~~~
@@ -383,6 +384,7 @@ wget git.io/trans
 ## Interactive mode
 ~~~
 $ trans -I -b
+> :en
 > :ja hello
 こんにちは
 > :zh hello
