--- a/links.md.html
+++ b/links.md.html
@@ -90,10 +90,12 @@ Develop
 - [color schemes](https://github.com/oumu/mintty-color-schemes)
 
 ## フォント
-- [Best programming fonts](https://www.slant.co/topics/67/~best-programming-fonts)
+- [プログラミング用日本語フォント](https://github.com/tsunesan3/awsome-jp-coding-fonts)
+  - [Cica](https://github.com/miiton/Cica)
+  - [Myrica](https://myrica.estable.jp/)
+  - [Rounded Mgen+](http://jikasei.me/font/rounded-mgenplus/)
 - [日本語等幅フォント](https://qiita.com/hamaguchitm/items/546d40b7777bd9242e78)
-- [Myrica](https://myrica.estable.jp/)
-- [Rounded Mgen+](http://jikasei.me/font/rounded-mgenplus/)
+- [Best programming fonts](https://www.slant.co/topics/67/~best-programming-fonts)
 
 ## Vim
 - [vim](https://www.vim.org/)
@@ -256,6 +258,7 @@ Programming
 ## Python
 - [python](https://www.python.org/)
   | [doc](https://docs.python.org/ja/3/index.html)
+  | [tutorial](https://docs.python.org/ja/3/tutorial/)
   | [基礎文法とサンプル集](https://algorithm.joho.info/programming/python/sample-code-py/)
 - [NumPy](https://algorithm.joho.info/programming/python/numpy-sample-code/)
 - [matplotlib](https://qiita.com/skotaro/items/08dc0b8c5704c94eafb9)
