--- a/os.md.html
+++ b/os.md.html
@@ -445,6 +445,7 @@ VirtualBox
 Shortcut    | Description
 ------------|---
 Host        | Right Control
+Host + C    | scale mode
 Host + F    | full screen
 Host + M    | minimize
 Host + Home | menu
@@ -509,6 +510,7 @@ sudo apt install universal-ctags
 sudo apt install clang
 sudo apt install python3-venv
 sudo apt install python3-dev
+sudo apt install nodejs npm
 ~~~
 
 ## Setup
